--- a/Informacion de Contacto/InformaciondelContacto.html
+++ b/Informacion de Contacto/InformaciondelContacto.html
@@ -10,27 +10,27 @@
             
             <table border="1" class="table">
                 <tr>
-                    <th><img src="../img/gmail.png" width="80px" height="100"/></th>
+                    <th><img class="twoimg" src="../img/gmail.png" width="80px" height="100"/></th>
                     <th>Correo Electronico: </th>
                     <td>citaosa321@gmail.com</td>
                 </tr>
                 <tr>
-                    <th><img src="../img/Facebook.png" width="80px" height="100px"/></th>
+                    <th><img class="threeimg" src="../img/Facebook.png" width="80px" height="100px"/></th>
                     <th>Facebook:</th>
                     <td><a href="https://www.facebook.com/tatiana.ocampo.98478?mibextid=ZbWKwL" target="_blank">https://www.facebook.com/tatiana.ocampo.98478?mibextid=ZbWKwL</a></td>
                 </tr>
                 <tr>
-                    <th><img src="../img/Github.png" width="80px" height="100px"></th>
+                    <th><img class="fourimg" src="../img/Github.png" width="80px" height="100px"></th>
                     <th>Github</th>
                     <td><a href="https://github.com/Tatiana1518" target="_blank">https://github.com/Tatiana1518</td>
                 </tr>
                 <tr>
-                    <th><img src="../img/linkedin.png" width="80px" height="100px" ></th>
+                    <th><img class="fiveimg" src="../img/linkedin.png" width="80px" height="100px" ></th>
                     <th>linkedin</th>
                     <td><a href="https://www.linkedin.com/in/tatiana-ocampo-2880b726b" target="_blank">https://www.linkedin.com/in/tatiana-ocampo-2880b726b</td>
                 </tr>
                 <tr>
-                    <th><img src="../img/Whatsapp.png" width="80px" height="100px"></th>
+                    <th><img class="siximg" src="../img/Whatsapp.png" width="80px" height="100px"></th>
                     <th>WhatsApp</th>
                     <td><a href="https://wa.link/jxwlzu" target="_blank">https://wa.link/jxwlzu</td>
                 </tr>
