--- a/Datos Personales/DatosPersonales.html
+++ b/Datos Personales/DatosPersonales.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../Css/style.css">
         <body>
             <div class="img">
-                <img src="../img/WhatsApp Image 2023-06-20 at 8.47.15 PM.jpeg" alt="">
+                <img class="oneimg" src="../img/WhatsApp Image 2023-06-20 at 8.47.15 PM.jpeg" alt="">
             </div>
                
             <table border="1" class="table">
